plugins/extensible-dataframes/testData/diagnostics/simple.kt
package foo.bar

import org.itmo.my.pretty.plugin.SomeAnnotation

@SomeAnnotation
fun test() {
    val s = MyClass().foo()
    s.<!UNRESOLVED_REFERENCE!>inc<!>() // should be an error
}
